1.Update mysql JDBC driver to 5.1.17 2.Fix log4j.dtd problem in Eclipse 3.Fix post date wrap problem in post show 4.Move reply sequence mark to the end of line 5.Fix topic title too long in forum list 6.Fix SystemGlobals reload error

--- a/trunk/src/main/resources/templates/default/styles/style.css
+++ b/trunk/src/main/resources/templates/default/styles/style.css
@@ -106,7 +106,7 @@ blockquote.uncited {
 .postbody { font-size: 12px; line-height: 1.5em; }
 
 .postinfo { font-size: 10px; color: #000000; background-color: #dee3e7; padding: 4px; height: 2em; }
-.postinfo .date { width: 160px; float: left; }
+.postinfo .date { width: 170px; float: left; }
 .postinfo .subject { float: left; }
 .postinfo .action { float: right; }
 
